# Lumix

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  cli.py  mkdocs.yml  mkdocs.yml.bak  project_structure.txt  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: api.md  index.md  modules.md
examples/: example_age.sh  example_area.sh  example_bases.sh  example_bitrate.sh  example_calendar.sh  example_color.sh  example_country.sh  example_currency.sh  example_data.sh  example_date.sh  example_energy.sh  example_hash.sh  example_iptools.sh  example_language.sh  example_length.sh  example_morse.sh  example_passwords.sh  example_phonetic.sh  example_power.sh  example_pressure.sh  example_roman.sh  example_speed.sh  example_spoken.sh  example_temps.sh  example_time.sh  example_timezonebot.sh  example_timezones.sh  example_unitsymbols.sh  example_volume.sh  example_weight.sh
lumix/: __init__.py
scripts/: update_rates.py
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_age.py  test_area.py  test_bases.py  test_bitrate.py  test_calendar.py  test_cli_integration.py  test_color.py  test_country.py  test_currency.py  test_data.py  test_date.py  test_energy.py  test_hash.py  test_iptools.py  test_language.py  test_length.py  test_morse.py  test_passwords.py  test_phonetic.py  test_power.py  test_pressure.py  test_roman.py  test_speed.py  test_spoken.py  test_temps.py  test_time.py  test_timezonebot.py  (+4 more)
(+216 files in other folders)
